Fix overflow

--- a/src/App.css
+++ b/src/App.css
@@ -42,6 +42,7 @@
 .pokemonList {
   background-color: white;
   color: black;
+  overflow-y: scroll;
 }
 
 .colorfulBorder {
